# EGNTA

./: .dockerignore  .env.example  .gitignore  DATA-CATALOGUE.md  Dockerfile  LESSONS.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: discovery-ci.yml
accelerator/: __init__.py  __main__.py  cli.py  llm.py  mining.py  model.py  pain.py  pii.py  readonly.py  report.py  synthesis.py  warehouse.py
accelerator/connectors/: __init__.py  csv_export.py
accelerator/verticals/: __init__.py  trades.py
bench/: __init__.py  baselines.py  generate.py  generate_trades.py  metric.py  run.py  validate_real_log.py
brand/: README.md
configs/: cs-qwen3-14b.yaml  datasets.coding-security.yaml  datasets.example.yaml  hf-jobs-smoke.yaml  smoke-test.yaml
datasets/: README.md
datasets/samples/: smoke.jsonl
docs/: ARCHITECTURE.md  BUILD-PROCESS.md  DECISIONS.md  DEPLOY.md  EVAL-METHOD.md
docs/cards/: cs-dataset-v1.md
eval/cases/: coding-security.jsonl
lessons/: LESSONS.md
observer/: brain_deep.py  brain_local.py  egenta.py  egenta.service  gate.py  journal.py  redactor.py  test_brain.py  test_brain_deep.py  test_daemon.py  test_gate.py  test_redactor.py  test_transcript.py  transcript.py
prompts/: system.md
scripts/: collect_dataset.py  common.py  convert_transcripts.py  eval.py  merge.py  redact_audit.py  test_convert.py  train.py  validate_dataset.py
tests/: conftest.py  test_bench.py  test_engine.py  test_hardening.py  test_llm.py  test_trades.py
