[project]
name = "egenta"
version = "0.1.0"
description = "Egenta, an always-on agent that observes Claude Code sessions and turns them into scripts, skills, lessons, and QLoRA training data"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.8.0",
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "peft>=0.15.0",
    "pyyaml>=6.0.2",
    "torch>=2.6.0",
    "trackio>=0.2.0",
    "transformers>=4.51.0",
    "trl>=0.17.0",
    "unsloth>=2026.5.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
