[project]
name = "egnta"
version = "0.1.0"
description = "EGNTA, a read-only client-discovery accelerator: maps how a business runs, finds where it hurts, never writes a thing"
requires-python = ">=3.12"
dependencies = []

# The discovery engine (accelerator/ + bench/) is stdlib-only, so the base install pulls
# nothing. The heavy ML stack belongs only to the deferred QLoRA training arm; install it
# with `pip install egnta[training]`, not by default.
[project.optional-dependencies]
training = [
    "accelerate>=1.8.0",
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "peft>=0.15.0",
    "pyyaml>=6.0.2",
    "torch>=2.6.0",
    "trackio>=0.2.0",
    "transformers>=4.51.0",
    "trl>=0.17.0",
    "unsloth>=2026.5.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
